--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,3 +46,10 @@ jobs:
         run: mix ecto.migrate
       - name: Run tests
         run: mix test
+      - name: Deploy to Heroku
+        uses: actions/checkout@v2
+      - name: Add backend remote origin
+        run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
+      - run: git fetch --unshallow
+      - name: Deploy to Heroku
+        run: git push heroku master:refs/heads/master --force
