--- a/assets/package.json
+++ b/assets/package.json
@@ -11,7 +11,9 @@
     "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view"
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "typeface-playfair-display": "^1.1.13",
+    "typeface-raleway": "^1.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
