Change deploy to gigalixir

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
           --health-retries 5
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: master
+          fetch-depth: 0
       - name: Set up Elixir
         uses: actions/setup-elixir@v1
         with:
@@ -46,10 +49,10 @@ jobs:
         run: mix ecto.migrate
       - name: Run tests
         run: mix test
-      - name: Deploy to Heroku
-        uses: actions/checkout@v2
-      - name: Add backend remote origin
-        run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-      - run: git fetch --unshallow
-      - name: Deploy to Heroku
-        run: git push heroku master:refs/heads/master --force
+      - name: Deploy to Gigalixir
+        uses: mhanberg/gigalixir-action@v0.1.0
+        with:
+          GIGALIXIR_USERNAME: ${{ secrets.GIGALIXIR_EMAIL }}
+          GIGALIXIR_PASSWORD: ${{ secrets.GIGALIXIR_PASSWORD }}
+          GIGALIXIR_APP: tobaccos
+          SSH_PRIVATE_KEY: ${{ secrets.GIGALIXIR_PRIVATE_KEY }}
