--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,10 +49,15 @@ jobs:
         run: mix ecto.migrate
       - name: Run tests
         run: mix test
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8.1'
       - name: Deploy to Gigalixir
-        uses: mhanberg/gigalixir-action@v0.1.0
+        uses: mhanberg/gigalixir-action@v0.4.3
         with:
           GIGALIXIR_USERNAME: ${{ secrets.GIGALIXIR_EMAIL }}
           GIGALIXIR_PASSWORD: ${{ secrets.GIGALIXIR_PASSWORD }}
           GIGALIXIR_APP: tobaccos
           SSH_PRIVATE_KEY: ${{ secrets.GIGALIXIR_PRIVATE_KEY }}
+          MIGRATIONS: false
