--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           ref: master
           fetch-depth: 0
       - name: Set up Elixir
-        uses: actions/setup-elixir@v1
+        uses: erlef/setup-beam@v1
         with:
           elixir-version: "1.11.3" # Define the elixir version [required]
           otp-version: "22.3" # Define the OTP version [required]
@@ -53,11 +53,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.8.1'
-      - name: Deploy to Gigalixir
-        uses: mhanberg/gigalixir-action@v0.4.3
+      - name: Deploy to Digital Ocean
+        run: mix edeliver update production
         with:
-          GIGALIXIR_USERNAME: ${{ secrets.GIGALIXIR_EMAIL }}
-          GIGALIXIR_PASSWORD: ${{ secrets.GIGALIXIR_PASSWORD }}
-          GIGALIXIR_APP: tobaccos
           SSH_PRIVATE_KEY: ${{ secrets.GIGALIXIR_PRIVATE_KEY }}
-          MIGRATIONS: false
