--- a/assets/package.json
+++ b/assets/package.json
@@ -3,11 +3,11 @@
   "description": " ",
   "license": "MIT",
   "scripts": {
-    "deploy": "webpack --mode production",
+    "deploy": "NODE_ENV=production webpack --mode production",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "alpinejs": "^2.7.3",
+    "alpinejs": "^2.8.2",
     "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
@@ -16,20 +16,20 @@
     "typeface-raleway": "^1.1.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
     "@tailwindcss/forms": "^0.2.1",
-    "autoprefixer": "^10.0.4",
-    "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss": "^8.1.10",
-    "postcss-loader": "^4.1.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss": "^8.2.8",
+    "postcss-loader": "^4.2.0",
     "sass-loader": "^8.0.2",
-    "tailwindcss": "^2.0.1",
+    "tailwindcss": "^2.0.4",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.2"
