--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.8.1"
-      - name: Build release
-        run: mix edeliver build release
-      - name: Deploy to Digital Ocean
-        run: mix edeliver deploy release to production
+      - name: Build release and deploy
+        run: mix edeliver update production --start-deploy --clean-deploy
+      - name: Run Migration
+        run: mix edeliver migrate production
