--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,7 @@ npm-debug.log
 # Since we are building assets from assets/,
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
-/priv/static/assets/app.js
-/priv/static/assets/app.css
+/priv/static/
 
 .tool-versions
 
